
*** Autotest provides a new macro AT_DATA_UNQUOTED, similar to AT_DATA
    but processing variable substitutions, command substitutions and
    backslashes in the contents argument.

*** AC_CONFIG_TESTDIR will automatically pass EXEEXT to a testsuite (via
    the atconfig file).

*** AT_TESTED arguments can use variable or command substitutions, including
    in particular $EXEEXT

* Noteworthy changes in release 2.69 (2012-04-24) [stable]

** Autoconf now requires perl 5.6 or better (but generated configure
   scripts continue to run without perl).

* Noteworthy changes in release 2.68b (2012-03-01) [beta]
  Released by Eric Blake, based on git versions 2.68.*.

** Autoconf-generated configure scripts now unconditionally re-execute
   themselves with $CONFIG_SHELL, if that's set in the environment.

** The texinfo documentation no longer specifies "front-cover" or
   "back-cover" texts, so that it may now be included in Debian's
   "main" section.

** Support for the Go programming language has been added.  The new macro
   AC_LANG_GO sets variables GOC and GOFLAGS.

** AS_LITERAL_IF again treats '=' as a literal.  Regression introduced in
   2.66.

** The macro AS_EXECUTABLE_P, present since 2.50, is now documented.

** Macros

- AC_PROG_LN_S and AS_LN_S now fall back on 'cp -pR' (not 'cp -p') if 'ln -s'
  does not work.  This works better for symlinks to directories.

- New macro AC_HEADER_CHECK_STDBOOL.

- New and updated macros for Fortran support:

    AC_FC_CHECK_BOUNDS to enable array bounds checking
    AC_F77_IMPLICIT_NONE and AC_FC_IMPLICIT_NONE to disable implicit integer
    AC_FC_MODULE_EXTENSION to compute the Fortran 90 module name extension
    AC_FC_MODULE_FLAG for the Fortran 90 module search path flag
    AC_FC_MODULE_OUTPUT_FLAG for the Fortran 90 module output directory flag
    AC_FC_PP_SRCEXT for preprocessed Fortran source files extensions
    AC_FC_PP_DEFINE for the Fortran preprocessor define flag
